--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.idea
 /node_modules
 /public/hot
 /public/storage
@@ -9,3 +10,7 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.gitignore
+/.env
+/.gitattributes
+/bootstrap/cache/
