--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.gitignore
-/.gitattributes
 /bootstrap/cache/
+/.phpstorm.meta.php
+/_ide_helper.php
